# MayaCythonCli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VISION.md  agents.md  build-config.json  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli-reference.md  cli.md  config.md  index.md  maya-cython-pipeline-report.md  pipeline-quickstart.md  quickstart.md  testing.md  wrappers.md
scripts/: _invoke-cli.ps1  assemble-module.ps1  build-package.ps1  create-conda-env.ps1  run-pipeline.ps1  smoke-package.ps1
skills/maya-cython-compile/: SKILL.md
skills/maya-cython-compile/references/: workflow.md
src/gg_maya_tool/: _resources.py  tool_manifest.json
src/maya_cython_compile/: __init__.py  artifacts.py  cli.py  conda.py  config.py  errors.py  filesystem.py  paths.py  pipeline.py  runtime_probe.py  target_builder.py  verify.py
src/maya_tool/: __init__.py  _cy_logic.py  bootstrap.py  tool_manifest.json
tests/: probe_fixtures.py  test_cli.py  test_config.py  test_exit_codes.py  test_pipeline.py  test_verify.py  test_wrappers.py
