[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "maya-cython-compile"
version = "0.1.0"
description = "CLI for building Maya-targeted Cython packages from a standard Python environment."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ZO" }]

[project.optional-dependencies]
dev = [
    "mypy>=1.20",
    "ruff>=0.15",
]

[project.scripts]
maya-cython-compile = "maya_cython_compile.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["maya_cython_compile*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
exclude = '''(?x)(
    ^build/|
    ^dist/|
    .*\.egg-info/
)'''
